Make grid work, kinda

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>Crochet Friend</h1>
 <app-image-upload></app-image-upload>
+<app-toolbar></app-toolbar>
+<app-symbol-grid></app-symbol-grid>
 <router-outlet></router-outlet>
