--- a/src/app/components/image-upload/image-upload.component.html
+++ b/src/app/components/image-upload/image-upload.component.html
@@ -1,23 +1,17 @@
 <form [formGroup]="imageUploadForm">
-
   <div formGroupName="gridDimensions">
     <label>
-      Width:
-      <input type="number" min="1" formControlName="width">
+      Columns:
+      <input type="number" min="1" formControlName="columns">
     </label>
 
     <label>
-      Height:
-      <input type="number" min="1" formControlName="height">
+      Rows:
+      <input type="number" min="1" formControlName="rows">
     </label>
 
     Is valid? {{imageUploadForm.valid}}
   </div>
 
-  <app-file-upload formControlName="uploadedImage"></app-file-upload>
-
-  <app-symbol-grid
-    [numberOfColumns]="gridWidth"
-    [numberOfRows]="gridHeight"
-  ></app-symbol-grid>
+  <app-file-upload (ngModelChange)="onImageUpload($event)" formControlName="uploadedImage"></app-file-upload>
 </form>
