Use Map in GridImageCoordinator, handle image adding there

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,8 +1,1 @@
-<!-- <img
-  *ngFor="let image of images"
-  [src]="image.src"
-  [width]="image.width"
-  [height]="image.height"
-/> -->
-
-<span #imgTarget></span>
+<div #imgTarget></div>
