--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -15,8 +15,17 @@
 .imageContainer {
   cursor: pointer;
   position: relative;
+  transition: transform ease 0.2s;
+  height: 50px;
+  width: 50px;
+  padding: 5px;
+  opacity: .8;
 
   &:hover {
+    transform: scale(1.2);
+    z-index: 1;
+    opacity: 1;
+
     .removeImageIcon {
       visibility: visible;
     }
@@ -24,7 +33,8 @@
 }
 
 .isSelected {
-  box-shadow: 0 0 0.1em 0.1em rgb(175 175 175);
+  opacity: 1;
+  box-shadow: inset 0px 0px 0px 5px #ef9a9a;
 }
 
 .removeImageIcon {
