--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -20,6 +20,9 @@
   width: 50px;
   padding: 5px;
   opacity: .8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:hover {
     transform: scale(1.2);
@@ -54,4 +57,8 @@
   border: none;
   color: white;
   visibility: hidden;
+}
+
+.action {
+  border: 1px solid lighten($color: #000000, $amount: 75%);
 }
