Add eslint, add prettier, add column left

--- a/src/app/components/image-upload/file-upload/file-upload.component.html
+++ b/src/app/components/image-upload/file-upload/file-upload.component.html
@@ -1,12 +1,6 @@
 <div class="uploadArea">
-  <label class="uploadLabel" for="imageUpload">Upload image</label>
-  <p *ngIf="files.length">Uploaded {{files.length}} files</p>
+    <label class="uploadLabel" for="imageUpload">Upload image</label>
+    <p *ngIf="files.length">Uploaded {{ files.length }} files</p>
 
-  <input
-    id="imageUpload"
-    style="display: none;"
-    type="file"
-    [attr.accept]="acceptExtensions"
-    multiple
-  />
+    <input id="imageUpload" style="display: none" type="file" [attr.accept]="acceptExtensions" multiple />
 </div>
