--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,6 +1,1 @@
-<input
-  #input
-  [type]="type"
-  (keyup)="keyUpHandler(input.value)"
-  (blur)="blurHandler(input.value)"
-/>
+<input #input [type]="type" (keyup)="keyUpHandler(input.value)" (blur)="blurHandler(input.value)" />
