--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,34 +1,32 @@
 <h3>Actions</h3>
 <div class="imagesContainer">
-  <div
-    *ngFor="let action of actions"
-    class="imageContainer action"
-    [class.isSelected]="currentItem === action"
-    (click)="onToolbarActionClick(action)"
-  >
-    {{action.type}}
-  </div>
+    <div
+        *ngFor="let action of actions"
+        class="imageContainer action"
+        [class.isSelected]="currentItem === action"
+        (click)="onToolbarActionClick(action)"
+    >
+        {{ action.type }}
+    </div>
 </div>
 
 <h3>Images</h3>
 <div class="imagesContainer">
-  <div
-    *ngFor="let image of imageService.images | async"
-    class="imageContainer"
-    [ngClass]="{
-      isSelected: currentItem === image
-    }"
-  >
-    <img
-      [src]="sanitize(image.src)"
-      (click)="onToolbarImageClick(image)"
-      [ngStyle]="{
-        'width.px': image.width,
-        'height.px': image.height
-      }"
-    />
-    <button class="removeImageIcon" (click)="imageService.removeImage(image)">
-      -
-    </button>
-  </div>
+    <div
+        *ngFor="let image of imageService.images | async"
+        class="imageContainer"
+        [ngClass]="{
+            isSelected: currentItem === image
+        }"
+    >
+        <img
+            [src]="sanitize(image.src)"
+            (click)="onToolbarImageClick(image)"
+            [ngStyle]="{
+                'width.px': image.width,
+                'height.px': image.height
+            }"
+        />
+        <button class="removeImageIcon" (click)="imageService.removeImage(image)">-</button>
+    </div>
 </div>
