Add tailwind, migrate some styles, prettier fix, add column and row addition buttons, styling changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>Crochet Friend</h1>
-<app-image-upload></app-image-upload>
+<h1 class="text-4xl text-center mb-4">Crochet Friend</h1>
+<app-image-upload class="mb-4"></app-image-upload>
 <app-toolbar></app-toolbar>
 <app-symbol-grid></app-symbol-grid>
 <router-outlet></router-outlet>
