--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,32 +1,31 @@
-<h3>Actions</h3>
-<div class="imagesContainer">
-    <div
+<div class="grid gap-4 grid-rows-1 grid-cols-2">
+  <div class="flex flex-col flex-1">
+    <h3>Actions</h3>
+    <div class="grid grid-flow-col grid-rows-1 overflow-auto p-4 my-4 bg-gray-100 flex-grow">
+      <div
         *ngFor="let action of actions"
         class="imageContainer action"
         [class.isSelected]="currentItem === action"
         (click)="onToolbarActionClick(action)"
-    >
+      >
         {{ action.type }}
+      </div>
     </div>
-</div>
+  </div>
 
-<h3>Images</h3>
-<div class="imagesContainer">
-    <div
+  <div class="flex flex-col flex-1">
+    <h3>Images</h3>
+    <div class="grid grid-flow-col grid-rows-1 overflow-auto p-4 my-4 bg-gray-100 flex-grow">
+      <div
         *ngFor="let image of imageService.images | async"
         class="imageContainer"
         [ngClass]="{
-            isSelected: currentItem === image
+          isSelected: currentItem === image
         }"
-    >
-        <img
-            [src]="sanitize(image.src)"
-            (click)="onToolbarImageClick(image)"
-            [ngStyle]="{
-                'width.px': image.width,
-                'height.px': image.height
-            }"
-        />
+      >
+        <img class="object-cover h-full" [src]="sanitize(image.src)" (click)="onToolbarImageClick(image)" />
         <button class="removeImageIcon" (click)="imageService.removeImage(image)">-</button>
+      </div>
     </div>
+  </div>
 </div>
