--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -1,64 +1,51 @@
 :host {
-    display: block;
-}
-
-.imagesContainer {
-    display: grid;
-    grid-gap: 0.5em;
-    grid-template-columns: repeat(auto-fit, 50px);
-    margin: 1em 0;
-    background-color: #e9e9e9;
-    padding: 1em;
-    min-height: 50px;
-}
-
-.imageContainer {
-    cursor: pointer;
-    position: relative;
-    transition: transform ease 0.2s;
-    height: 50px;
-    width: 50px;
-    padding: 5px;
-    opacity: 0.8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    &:hover {
-        transform: scale(1.2);
-        z-index: 1;
-        opacity: 1;
-
-        .removeImageIcon {
-            visibility: visible;
-        }
-    }
-}
-
-.isSelected {
-    opacity: 1;
-    box-shadow: inset 0px 0px 0px 5px #ef9a9a;
+  display: block;
 }
 
 .removeImageIcon {
-    cursor: pointer;
-    position: absolute;
-    top: -15%;
-    right: -15%;
-    border-radius: 100px;
-    padding: 0.1em;
-    background-color: #d33434;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-    border: none;
-    color: white;
-    visibility: hidden;
+  visibility: hidden;
+
+  @apply m-0
+  flex
+  items-center
+  justify-center
+  top-0
+  right-0
+  w-4
+  h-4
+  cursor-pointer
+  border-0
+  absolute
+  rounded-full
+  p-1
+  bg-red-400
+  text-white;
 }
 
-.action {
-    border: 1px solid lighten($color: #000000, $amount: 75%);
+.imageContainer {
+  @apply relative
+    cursor-pointer
+    flex
+    items-center
+    justify-center
+    w-14
+    h-14
+    text-center
+    transition-transform
+    transform
+    hover:scale-125
+    p-1;
+
+  &:hover {
+    z-index: 1;
+
+    .removeImageIcon {
+      visibility: visible;
+    }
+  }
+}
+
+.isSelected {
+  opacity: 1;
+  box-shadow: inset 0px 0px 0px 5px #ef9a9a;
 }
