--- a/src/app/components/symbol-grid/symbol-grid.component.html
+++ b/src/app/components/symbol-grid/symbol-grid.component.html
@@ -1,16 +1,14 @@
 <div class="mb-4 grid gap-2 grid-rows-1 grid-flow-col">
-    <button class="py-2 px-4 border-2 bg-white hover:bg-gray-100 rounded-sm" (click)="addColumnLeft()">
-        Add column left
-    </button>
-    <button class="py-2 px-4 border-2 bg-white hover:bg-gray-100 rounded-sm" (click)="addColumnRight()">
-        Add column right
-    </button>
-    <button class="py-2 px-4 border-2 bg-white hover:bg-gray-100 rounded-sm" (click)="addRowUp()">Add row up</button>
-    <button class="py-2 px-4 border-2 bg-white hover:bg-gray-100 rounded-sm" (click)="addRowDown()">
-        Add row down
-    </button>
+  <button class="py-2 px-4 border-2 bg-white hover:bg-gray-100 rounded-sm" (click)="addColumnLeft()">
+    Add column left
+  </button>
+  <button class="py-2 px-4 border-2 bg-white hover:bg-gray-100 rounded-sm" (click)="addColumnRight()">
+    Add column right
+  </button>
+  <button class="py-2 px-4 border-2 bg-white hover:bg-gray-100 rounded-sm" (click)="addRowUp()">Add row up</button>
+  <button class="py-2 px-4 border-2 bg-white hover:bg-gray-100 rounded-sm" (click)="addRowDown()">Add row down</button>
 </div>
-<div class="relative overflow-scroll border-2">
-    <canvas #gridCanvas id="grid"></canvas>
-    <canvas #overlayCanvas id="overlay" class="top-0 left-0 absolute"></canvas>
+<div class="relative overflow-hidden border-2">
+  <canvas #gridCanvas id="grid"></canvas>
+  <canvas #overlayCanvas id="overlay" class="top-0 left-0 absolute"></canvas>
 </div>
